--- a/src/app/Administrador/report-ingreso-egreso/report-ingreso-egreso.page.html
+++ b/src/app/Administrador/report-ingreso-egreso/report-ingreso-egreso.page.html
@@ -1,92 +1,92 @@
 <ion-header>
-  <ion-toolbar color="primary">
-      <ion-buttons slot="start">
-          <ion-back-button defaultHref='/'></ion-back-button>
-      </ion-buttons>
-      <ion-title class="ion-text-capitalize ion-text-center">Planilla Ingreso/Egreso</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref='menu-administrator'></ion-back-button>
+        </ion-buttons>
+        <ion-title class="ion-text-capitalize ion-text-center">Planilla Ingreso/Egreso</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
-  <ion-row>
-      <ion-list>
-        <ion-row>
-            <ion-col>
-                <ion-item>
-                    <ion-label>
-                        Apellido
-                    </ion-label>
-                </ion-item>
-            </ion-col>
-            <ion-col>
-                <ion-item>
-                    <ion-label>
-                        Nombre
-                    </ion-label>
-                </ion-item>
-            </ion-col>
-            <ion-col>
-                <ion-item>
-                    <ion-label>
-                        DNI
-                    </ion-label>
-                </ion-item>
-            </ion-col>
-            <ion-col>
-                <ion-item>
-                    <ion-label>
-                        Marca
-                    </ion-label>
-                </ion-item>
-            </ion-col>
-            <ion-col>
-                <ion-item>
-                    <ion-label>
-                        Dominio
-                    </ion-label>
-                </ion-item>
-            </ion-col>
-        </ion-row>
-        <ion-row *ngFor="let p of planiallaIngresoEgreso">
-            <ion-col>
-                <ion-item>
-                    <ion-label>
-                        {{p.planillaPersona.apellidoPersona}}
-                    </ion-label>
-                </ion-item>
-            </ion-col>
-            <ion-col>
-                <ion-item>
-                    <ion-label>
-                        {{p.planillaPersona.nombrePersona}}
-                    </ion-label>
-                </ion-item>
-            </ion-col>
-            <ion-col>
-                <ion-item>
-                    <ion-label>
-                        {{p.planillaPersona.dniPersona}}
-                    </ion-label>
-                </ion-item>
-            </ion-col>
-            <ion-col>
-                <ion-item>
-                    <ion-label>
-                        {{p.planillaVehiculo.vehiculoMarca.nombreMarca}}
-                    </ion-label>
-                </ion-item>
-            </ion-col>
-            <ion-col>
-                <ion-item>
-                    <ion-label>
-                        {{p.planillaVehiculo.dominio}}
-                    </ion-label>
-                </ion-item>
-            </ion-col>
-        </ion-row>
-    </ion-list>
-  </ion-row>
+    <ion-row>
+        <ion-list>
+            <ion-row>
+                <ion-col>
+                    <ion-item>
+                        <ion-label>
+                            Apellido
+                        </ion-label>
+                    </ion-item>
+                </ion-col>
+                <ion-col>
+                    <ion-item>
+                        <ion-label>
+                            Nombre
+                        </ion-label>
+                    </ion-item>
+                </ion-col>
+                <ion-col>
+                    <ion-item>
+                        <ion-label>
+                            DNI
+                        </ion-label>
+                    </ion-item>
+                </ion-col>
+                <ion-col>
+                    <ion-item>
+                        <ion-label>
+                            Marca
+                        </ion-label>
+                    </ion-item>
+                </ion-col>
+                <ion-col>
+                    <ion-item>
+                        <ion-label>
+                            Dominio
+                        </ion-label>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+            <ion-row *ngFor="let p of planiallaIngresoEgreso">
+                <ion-col>
+                    <ion-item>
+                        <ion-label>
+                            {{p.planillaPersona.apellidoPersona}}
+                        </ion-label>
+                    </ion-item>
+                </ion-col>
+                <ion-col>
+                    <ion-item>
+                        <ion-label>
+                            {{p.planillaPersona.nombrePersona}}
+                        </ion-label>
+                    </ion-item>
+                </ion-col>
+                <ion-col>
+                    <ion-item>
+                        <ion-label>
+                            {{p.planillaPersona.dniPersona}}
+                        </ion-label>
+                    </ion-item>
+                </ion-col>
+                <ion-col>
+                    <ion-item>
+                        <ion-label>
+                            {{p.planillaVehiculo.vehiculoMarca.nombreMarca}}
+                        </ion-label>
+                    </ion-item>
+                </ion-col>
+                <ion-col>
+                    <ion-item>
+                        <ion-label>
+                            {{p.planillaVehiculo.dominio}}
+                        </ion-label>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+        </ion-list>
+    </ion-row>
 
 
 </ion-content>
