--- a/src/app/Administrador/event-report/event-report.page.html
+++ b/src/app/Administrador/event-report/event-report.page.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar color="primary">
         <ion-buttons slot="start">
-            <ion-back-button defaultHref='/'></ion-back-button>
+            <ion-back-button defaultHref='menu-administrator'></ion-back-button>
         </ion-buttons>
         <ion-title class="ion-text-capitalize ion-text-center">Eventos</ion-title>
     </ion-toolbar>
@@ -9,25 +9,18 @@
 
 <ion-content class="ion-padding">
 
-  <ion-item>
-    <ion-label>Selecione una fecha</ion-label>
-    <ion-icon mode="ios" name="calendar"></ion-icon>
-    <ion-datetime displayFormat="DD/MM/YYYY"
-                  placeholder="01-01-19"
-                  cancel-text='Cancelar'
-                  done-text="Seleccionar"
-                  [(ngModel)]="fecha"
-                  min="2019"
-                  max="2030"
-                  (ionChange)="obtener($event)"></ion-datetime>
-  </ion-item>
+    <ion-item>
+        <ion-label>Selecione una fecha</ion-label>
+        <ion-icon mode="ios" name="calendar"></ion-icon>
+        <ion-datetime displayFormat="DD/MM/YYYY" placeholder="01-01-19" cancel-text='Cancelar' done-text="Seleccionar" [(ngModel)]="fecha" min="2019" max="2030" (ionChange)="obtener($event)"></ion-datetime>
+    </ion-item>
 
-  <ion-card style="background: gray;">
-    <ion-list>
-      <ion-item *ngFor="let e of eventos; let i = index">
-        <label (click)="verEvento(i)">{{e.nombreEvento}}</label>
-      </ion-item>
-    </ion-list>
-  </ion-card>
+    <ion-card style="background: gray;">
+        <ion-list>
+            <ion-item *ngFor="let e of eventos; let i = index">
+                <label (click)="verEvento(i)">{{e.nombreEvento}}</label>
+            </ion-item>
+        </ion-list>
+    </ion-card>
 
 </ion-content>
