--- a/src/app/User/menu-user/menu-user.page.html
+++ b/src/app/User/menu-user/menu-user.page.html
@@ -1,9 +1,33 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>menuUser</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-title class="ion-text-capitalize ion-text-center">IngresAr</ion-title>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content>
+
+<ion-content class="ion-text-center">
+    <ion-card>
+        <ion-card-header>
+            <ion-card-title>Bienvenido!</ion-card-title>
+            <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>
+            <ion-list>
+                <ion-item>
+                    <ion-label>Mis Vehículos</ion-label>
+                </ion-item>
+                <ion-item>
+                    <ion-label>Mis Autorizaciones</ion-label>
+                </ion-item>
+            </ion-list>
+        </ion-card-content>
+    </ion-card>
 
 </ion-content>
+<ion-footer>
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+        <ion-fab-button (click)="mostrar()">
+            <ion-icon name="person"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
+</ion-footer>
