ruteo de porteria

--- a/src/app/Owner/porteria/porteria.page.html
+++ b/src/app/Owner/porteria/porteria.page.html
@@ -1,29 +1,16 @@
-<ion-header>
-    <ion-toolbar color="primary">
-        <ion-buttons slot="start">
-            <ion-back-button defaultHref='/menu-owner'></ion-back-button>
-        </ion-buttons>
-        <ion-title class="ion-text-capitalize ion-text-center">Portería</ion-title>
-    </ion-toolbar>
-</ion-header>
-
-
-<ion-content>
-    <ion-tabs>
-        <ion-tab-bar color="" slot="top">
-            <ion-tab-button tab="list">
-                <ion-label>Registros</ion-label>
-                <ion-icon name="document"></ion-icon>
-            </ion-tab-button>
-            <ion-tab-button tab="friendsList">
-                <ion-label>Mensajes</ion-label>
-                <ion-icon name="chatboxes"></ion-icon>
-            </ion-tab-button>
-            <ion-tab-button tab="friendsList">
-                <ion-label>Vehículos</ion-label>
-                <ion-icon name="car"></ion-icon>
-            </ion-tab-button>
-        </ion-tab-bar>
-
-    </ion-tabs>
-</ion-content>
+<ion-tabs>
+    <ion-tab-bar color="" slot="bottom">
+        <ion-tab-button tab="records">
+            <ion-label>Registros</ion-label>
+            <ion-icon name="document"></ion-icon>
+        </ion-tab-button>
+        <ion-tab-button tab="messages">
+            <ion-label>Mensajes</ion-label>
+            <ion-icon name="chatboxes"></ion-icon>
+        </ion-tab-button>
+        <ion-tab-button tab="vehicles">
+            <ion-label>Vehículos</ion-label>
+            <ion-icon name="car"></ion-icon>
+        </ion-tab-button>
+    </ion-tab-bar>
+</ion-tabs>
