--- a/src/app/Owner/events/view-friend-list/view-friend-list.page.html
+++ b/src/app/Owner/events/view-friend-list/view-friend-list.page.html
@@ -1,9 +1,45 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>ViewFriendList</ion-title>
+  <ion-toolbar color="primary">
+      <ion-buttons slot="start">
+          <ion-back-button defaultHref='/frient-list'></ion-back-button>
+      </ion-buttons>
+      <ion-title class="ion-text-capitalize ion-text-center">Lista de Amigos</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
+  <ion-row>
+    <ion-card>
+      <ion-item *ngFor="let l of listaAmigo?.amigos; let i = index">
+        <ion-list>
+          <ion-row>
+            <ion-col class="tamaño">
+              <ion-label>{{l.apellidoPersona}} </ion-label>
+            </ion-col>
+            <ion-col class="tamaño">
+                <ion-label>{{l.nombrePersona}} </ion-label>
+            </ion-col>
+            <ion-col class="tamaño">
+                <ion-label>{{l.dniPersona}} </ion-label>
+            </ion-col>
+            <ion-col class="tamañoIcon">
+              <ion-button shape="round" fill="outline" (click)="deleteAmigo(i)">
+                <ion-icon name="remove"></ion-icon>
+              </ion-button>
+            </ion-col>
+          </ion-row>
+        </ion-list>
+      </ion-item>
+    </ion-card>
+  </ion-row>
+
 </ion-content>
+
+<ion-footer>
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+        <ion-fab-button routerLink="/add-friend">
+          <ion-icon name="add"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
+</ion-footer>
