--- a/src/app/Administrador/search-homeowner/search-homeowner.page.html
+++ b/src/app/Administrador/search-homeowner/search-homeowner.page.html
@@ -13,7 +13,7 @@
           <h3>Por favor ingrese el email</h3>
           <ion-item>
             <ion-label>Email:</ion-label>
-            <ion-input class="ml-2" type="number" placeholder="Email" [(ngModel)]="email"></ion-input>
+            <ion-input class="ml-2" type="text" placeholder="Email" [(ngModel)]="email"></ion-input>
           </ion-item>
       </ion-row>
       <div style="text-align-last: right">
