--- a/src/app/Owner/authorizations/visit/visit.page.html
+++ b/src/app/Owner/authorizations/visit/visit.page.html
@@ -10,3 +10,11 @@
 <ion-content>
 
 </ion-content>
+
+<ion-footer>
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+        <ion-fab-button (click)="generarAutorizacion()">
+          <ion-icon name="add"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
+</ion-footer>
