--- a/src/app/Owner/authorizations/generate-qr/generate-qr.page.html
+++ b/src/app/Owner/authorizations/generate-qr/generate-qr.page.html
@@ -61,7 +61,7 @@
                   <input matInput placeholder="Ingrese DNI" formControlName="firstCtrl" required [(ngModel)]="dni">
                 </mat-form-field>
                 <div>
-                  <button mat-button color="primary" (click)="getpersona()" matStepperNext>Siguiente</button>
+                  <button mat-button color="primary" (click)="getpersona(stepper)" >Siguiente</button>
                 </div>
               </form>
             </mat-step>
