--- a/src/global.scss
+++ b/src/global.scss
@@ -13,6 +13,7 @@
 /* Core CSS required for Ionic components to work properly */
 
 @import "~@ionic/angular/css/core.css";
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
 
 /* Basic CSS for apps built with Ionic */
 
