--- a/src/app/Administrador/search-homeowner/search-homeowner.page.html
+++ b/src/app/Administrador/search-homeowner/search-homeowner.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
             <ion-back-button defaultHref='/'></ion-back-button>
         </ion-buttons>
-        <ion-title class="ion-text-capitalize ion-text-center">Propietario</ion-title>
+        <ion-title class="ion-text-capitalize ion-text-center">Crear Propietario</ion-title>
     </ion-toolbar>
   </ion-header>
   
