--- a/src/app/Administrador/search-person-guard/search-person-guard.page.html
+++ b/src/app/Administrador/search-person-guard/search-person-guard.page.html
@@ -3,7 +3,7 @@
       <ion-buttons slot="start">
           <ion-back-button defaultHref='/'></ion-back-button>
       </ion-buttons>
-      <ion-title class="ion-text-capitalize ion-text-center">Guardias</ion-title>
+      <ion-title class="ion-text-capitalize ion-text-center">Crear Guardia</ion-title>
   </ion-toolbar>
 </ion-header>
 
