vehiculos de usuario funcionando

--- a/src/app/User/menu-user/menu-user.page.html
+++ b/src/app/User/menu-user/menu-user.page.html
@@ -13,10 +13,10 @@
         </ion-card-header>
         <ion-card-content>
             <ion-list>
-                <ion-item>
+                <ion-item (click)="vehicles()">
                     <ion-label>Mis Vehículos</ion-label>
                 </ion-item>
-                <ion-item>
+                <ion-item (click)="autorizaciones()">
                     <ion-label>Mis Autorizaciones</ion-label>
                 </ion-item>
             </ion-list>
