--- a/src/app/Owner/events/place/place.page.html
+++ b/src/app/Owner/events/place/place.page.html
@@ -1,9 +1,27 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>place</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref='/events/places'></ion-back-button>
+        </ion-buttons>
+        <ion-title class="ion-text-capitalize ion-text-center animated fadeIn">{{espacioComun?.nombreEspacioComun}}</ion-title>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding" fullscreen>
+    <ion-row>
+        <ion-col style="text-align: center;">
+            <img [src]="convertedImage" class="img-fluid animated fadeIn " alt="Responsive image">
+            <ion-item>
+                <ion-label>Start Date</ion-label>
+                <ion-datetime value="1990-02-19" placeholder="Select Date"></ion-datetime>
+            </ion-item>
+
+            <ion-list>
+                <ion-item>
+                    <ion-label>Desde Hasta</ion-label>
+                </ion-item>
+            </ion-list>
+        </ion-col>
+    </ion-row>
 
 </ion-content>
