--- a/src/app/Owner/events/places/places.page.html
+++ b/src/app/Owner/events/places/places.page.html
@@ -8,8 +8,8 @@
 </ion-header>
 
 
-<ion-content fullscreen class="ion-padding">
-    <ion-list>
+<ion-content fullscreen class="ion-padding ">
+    <ion-list class="animated fadeIn">
         <ion-item (click)="onClick(i)" [ngClass]="(i % 2 == 0) ? 'odd' : 'even'" *ngFor="let n of espacioComun; let i = index">
             <ion-label class="ml-2"> {{n.nombreEspacioComun}} </ion-label>
         </ion-item>
