procesar qr para ingresar terminado

--- a/src/app/Owner/authorizations/generate-qr/generate-qr.page.html
+++ b/src/app/Owner/authorizations/generate-qr/generate-qr.page.html
@@ -90,6 +90,13 @@
             <mat-step>
               <ng-template matStepLabel>Generar autorización</ng-template>
               <div>
+                <button mat-button matStepperPrevious>Atras</button>
+                <button mat-button color="primary" (click)="createPdf()" matStepperNext>Crear Autorizacion</button>
+              </div>
+            </mat-step>
+            <mat-step>
+              <ng-template matStepLabel>Evniar autorización</ng-template>
+              <div>
                 <button mat-button color="primary" (click)="stepper.reset()">Reset</button>
                 <button mat-button color="primary" (click)="crearQr()" matStepperPrevious>Crear Autorizacion</button>
               </div>
