--- a/src/app/Administrador/event-report/event-report.page.html
+++ b/src/app/Administrador/event-report/event-report.page.html
@@ -12,10 +12,10 @@
     <ion-item>
         <ion-label>Selecione una fecha</ion-label>
         <ion-icon mode="ios" name="calendar"></ion-icon>
-        <ion-datetime displayFormat="DD/MM/YYYY" placeholder="01-01-19" cancel-text='Cancelar' done-text="Seleccionar" [(ngModel)]="fecha" min="2019" max="2030" (ionChange)="obtener($event)"></ion-datetime>
+        <ion-datetime displayFormat="DD/MM/YYYY" placeholder="01-01-19" cancel-text='Cancelar' done-text="Seleccionar" [(ngModel)]="fecha" min="2019" max="2030" (ionChange)="obtener()"></ion-datetime>
     </ion-item>
 
-    <ion-card style="background: gray;">
+    <ion-card>
         <ion-list>
             <ion-item *ngFor="let e of eventos; let i = index">
                 <label (click)="verEvento(i)">{{e.nombreEvento}}</label>
